<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:text="@string/dialog_set_style" />
    <!--提示用户要输入的内容-->
    <RadioGroup
        android:id="@+id/rg_style"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RadioButton
            android:checked="true"
            android:id="@+id/normal_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_set_style_normal"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorAccent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@color/colorPrimary" />

        <RadioButton
            android:id="@+id/circle_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_set_style_circle"
            android:inputType="textPassword"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorAccent" />
    </RadioGroup>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_set_style_confirm" />

        <Button
            android:id="@+id/bt_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_set_style_cancel" />
    </LinearLayout>
</LinearLayout>