<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_title"
        style="@style/TitleStyle"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:text="@string/dialog_show_my_message_title" />
    <!--提示用户要输入的内容-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_square_blue" />

        <TextView
            android:id="@+id/tv_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:text="@string/dialog_show_my_message"
            android:textColor="@android:color/holo_blue_dark" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/select_circle_button"
        android:text="@string/dialog_show_my_message_confirm"
        android:textColor="@android:color/white" />


</LinearLayout>