<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:fitsSystemWindows="true"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TitleStyle"
                android:text="@string/activity_app_list_lock_manage" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_system_app_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_app_liat_system_app_num" />

            <TextView
                android:id="@+id/tv_usr_app_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/activity_app_list_user_app_num" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_lock_des"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ccc"
            android:padding="5dp"
            android:text="@string/activity_app_list_locked_app"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lv_app_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_system_app_num">

        </ListView>
    </LinearLayout>

    <ImageButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="bottom|center"
        android:background="@drawable/select_square_button"
        android:src="@android:drawable/ic_menu_add" />
</android.support.design.widget.CoordinatorLayout>